--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rice Bootcamp Module 11 Assignment: Zoo Keepr",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Josh236061/zoo-keepr#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.2.1"
   }
 }
